# hidoki

./: CMakeLists.txt  LICENSE
example/: CMakeLists.txt  test.cpp
framework/: CMakeLists.txt
framework/lib/: example_service.h  host.h  host_service_container.h  scope.h
framework/lib/interface/: example.h
framework/src/: example_service.cpp  host.cpp  host_service_container.cpp  scope.cpp
